--- a/.ideavimrc
+++ b/.ideavimrc
@@ -26,8 +26,11 @@ map g<C-N> g<A-N>
 
 " Don't use Ex mode, use Q for formatting.
 map Q gq
-
 nmap gi :action GotoImplementation<CR>
+
+nmap <leader><leader>s :action KJumpAction<cr>
+nmap <leader><leader>w :action KJumpAction.Word0<cr>
+nmap <leader><leader>l :action KJumpAction.Line<cr>
 
 "" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
 "" Map \r to the Reformat Code action
